--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "build:external": "webpack --config ./external/webpack.config.js"
   },
   "keywords": [],
   "author": "Alex Chip <alexchip32@gmail.com>",
