--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:multi": "webpack --config ./multi-entry-points/webpack.config.js",
     "build:css": "webpack --config ./css-style-loader/webpack.config.js",
     "build:plugins": "webpack --config ./plugins/webpack.config.js",
-    "build:dev": "webpack-dev-server --config ./webpack-dev-server/webpack.config.js --open"
+    "build:dev": "webpack-dev-server --config ./webpack-dev-server/webpack.config.js"
   },
   "keywords": [],
   "author": "Alex Chip <alexchip32@gmail.com>",
