--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build:babel": "webpack-dev-server --config ./babel/webpack.config.js",
     "build:react": "webpack-dev-server --config ./react/webpack.config.js",
     "build:url-loader": "webpack-dev-server --config ./url-loader/webpack.config.js",
-    "build:prepo": "webpack-dev-server --config ./prepocesadores/webpack.config.js"
+    "build:prepo": "webpack-dev-server --config ./prepocesadores/webpack.config.js",
+    "build:prevent": "webpack --config ./prevent-duplication/webpack.config.js"
   },
   "keywords": [],
   "author": "Alex Chip <alexchip32@gmail.com>",
