--- a/platzi-badges/package.json
+++ b/platzi-badges/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "server": "json-server --port 3001 --watch server/db.json",
+    "server": "json-server --port 3001 --watch server/db.json --static ./dist",
     "seed": "node server/seed.js",
-    "build:dev": "webpack-dev-server --config ./webpack.dev.config.js"
+    "build:dev": "webpack-dev-server --config ./webpack.dev.config.js",
+    "build": "webpack --config ./webpack.config.js --mode production",
+    "build:dll": "webpack --config ./webpack.dll.config.js --mode production"
   },
   "dependencies": {
     "@babel/runtime": "^7.10.5",
@@ -21,13 +23,16 @@
     "@babel/plugin-transform-runtime": "7.10.5",
     "@babel/preset-env": "7.10.4",
     "@babel/preset-react": "7.10.4",
+    "add-asset-html-webpack-plugin": "^3.1.3",
     "babel-loader": "8.1.0",
     "css-loader": "3.6.0",
     "faker": "4.1.0",
     "file-loader": "6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "json-server": "^0.16.1",
+    "mini-css-extract-plugin": "^0.9.0",
     "style-loader": "1.2.1",
+    "url-loader": "^4.1.0",
     "webpack": "4.43.0",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.0"
